--- a/web.css
+++ b/web.css
@@ -1,3 +1,6 @@
+/*instructor john nel lim 
+for final hands-on exam*/
+
 *
 {
     margin: 0;
@@ -6,12 +9,7 @@
 
 .main
 {
-    width : 100%;
-    background: linear-gradient(to top, rgba(0,0,0,0.5)50%, 
-    rgba(0,0,0,0.5)50%), url(1.jpg);
-    background-position: center;
-    background-size: cover;
-    height: 109vh;
+
 }
 
 .navbar
@@ -75,11 +73,12 @@ ul li a:hover
     color: #e2914e;
 }
 
+/*instructor john nel lim 
+for final hands-on exam*/
+
 .search
 {
-    width: 330px;
-    float: left;
-    margin-left: 270px;
+ 
 }
 
 .srch
@@ -124,8 +123,7 @@ ul li a:hover
 
 .content
 {
-    width: 1200px;
-    height: auto;
+
     margin: auto;
     color: #FFF;
     position: relative;
@@ -133,11 +131,7 @@ ul li a:hover
 
 .content .par
 {
-    padding-left: 20px;
-    padding-bottom: 25px;
-    font-family: Arial;
-    letter-spacing: 1.2px;
-    line-height: 30px;
+
 }
 
 .content h1
@@ -300,3 +294,6 @@ ul li a:hover
 {
     color: #e2914e;
 }
+
+/*instructor john nel lim 
+for final hands-on exam*/
